--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <html>
 <head>
-<title>444 Tagged Open Ruby Bugs as of 2019-12-15 03:57:03 +0900</title>
+<title>424 Tagged Open Ruby Bugs as of 2019-12-20 17:09:22 +0900</title>
 <link rel="stylesheet"  href="app.css" />
 </head>
 <body>
 <p class="filter-buttons">Available Tags: <input type="submit" value="core" />
 <input type="submit" value="win" />
-<input type="submit" value="lib" />
 <input type="submit" value="patch" />
+<input type="submit" value="lib" />
 <input type="submit" value="ext" />
 <input type="submit" value="maybenotbug" />
 <input type="submit" value="notbug" />
@@ -23,25 +23,25 @@
 <input type="submit" value="backport" />
 <input type="submit" value="arm" />
 <input type="submit" value="aix" />
-<input type="submit" value="ruby3" />
-<input type="submit" value="haiku" />
 <input type="submit" value="unfixable" />
-<input type="submit" value="openssl" />
+<input type="submit" value="ruby3" />
 <input type="submit" value="solaris" />
 <input type="submit" value="parser" />
+<input type="submit" value="openssl" />
 <input type="submit" value="autoload" />
 <input type="submit" value="doc" />
 <input type="submit" value="fiber" />
 <input type="submit" value="linux" />
 <input type="submit" value="wip-patch" />
-<input type="submit" value="uriencoding" />
+<input type="submit" value="haiku" />
 <input type="submit" value="mips" />
+<input type="submit" value="uriencoding" />
 <input type="submit" value="other" /></p>
 <label for="filter">Filter Tags:</label>
 <input id="filter" type="text" size="80" />
-(<span id="matched">444</span> matched)
+(<span id="matched">424</span> matched)
 <table>
-<caption>444 Tagged Open Ruby Bugs as of 2019-12-15 03:57:03 +0900</caption>
+<caption>424 Tagged Open Ruby Bugs as of 2019-12-20 17:09:22 +0900</caption>
 <thead>
 <tr class=" Tags ">
 <th>Bug ID</th>
@@ -50,11 +50,11 @@
 </tr>
 </thead>
 <tbody>
-<tr class=" patch build ">
-<td><a href="https://bugs.ruby-lang.org/issues/16418">16418</a>
+<tr class=" core notbug ">
+<td><a href="https://bugs.ruby-lang.org/issues/16423">16423</a>
 </td>
-<td>patch build</td>
-<td><a href="https://bugs.ruby-lang.org/issues/16418">when configuring --with-os-version-string=none fails to strip entire version string on MacOS</a>
+<td>core notbug</td>
+<td><a href="https://bugs.ruby-lang.org/issues/16423">Ruby Crash</a>
 </td>
 </tr>
 <tr class=" build ">
@@ -62,13 +62,6 @@
 </td>
 <td>build</td>
 <td><a href="https://bugs.ruby-lang.org/issues/16416">Suspicious include directories.</a>
-</td>
-</tr>
-<tr class=" patch lib ">
-<td><a href="https://bugs.ruby-lang.org/issues/16413">16413</a>
-</td>
-<td>patch lib</td>
-<td><a href="https://bugs.ruby-lang.org/issues/16413">Net::FTP#put で書き込みエラーが発生した時のコネクション切断</a>
 </td>
 </tr>
 <tr class=" test ">
@@ -90,20 +83,6 @@
 </td>
 <td>ext</td>
 <td><a href="https://bugs.ruby-lang.org/issues/16398">Active Support unit test error since caac5f777ae288b5982708b8690e712e1cae0cf6</a>
-</td>
-</tr>
-<tr class=" win core ">
-<td><a href="https://bugs.ruby-lang.org/issues/16392">16392</a>
-</td>
-<td>win core</td>
-<td><a href="https://bugs.ruby-lang.org/issues/16392">test-all failure Windows - TestEncoding#test_nonascii_library_path</a>
-</td>
-</tr>
-<tr class=" build ">
-<td><a href="https://bugs.ruby-lang.org/issues/16384">16384</a>
-</td>
-<td>build</td>
-<td><a href="https://bugs.ruby-lang.org/issues/16384">Cannot cross-compile 2.7: undefined method `each_builtin&#39; for RubyVM:Class (NoMethodError)</a>
 </td>
 </tr>
 <tr class=" patch tracepoint ">
@@ -190,13 +169,6 @@
 <td><a href="https://bugs.ruby-lang.org/issues/16344">Can be assigned to numbered parameter when after used _1</a>
 </td>
 </tr>
-<tr class=" thread ">
-<td><a href="https://bugs.ruby-lang.org/issues/16342">16342</a>
-</td>
-<td>thread</td>
-<td><a href="https://bugs.ruby-lang.org/issues/16342">macOS + Ruby 2.6.0 以降で拡張ライブラリ内での waitpid() コールに失敗する</a>
-</td>
-</tr>
 <tr class=" build ">
 <td><a href="https://bugs.ruby-lang.org/issues/16338">16338</a>
 </td>
@@ -216,13 +188,6 @@
 </td>
 <td>core</td>
 <td><a href="https://bugs.ruby-lang.org/issues/16288">Segmentation fault with finalizers, threads</a>
-</td>
-</tr>
-<tr class=" lib notbug ">
-<td><a href="https://bugs.ruby-lang.org/issues/16284">16284</a>
-</td>
-<td>lib notbug</td>
-<td><a href="https://bugs.ruby-lang.org/issues/16284">Net/HTTP consuming multiple times more memory compared to other libraries</a>
 </td>
 </tr>
 <tr class=" win ext maybenotbug ">
@@ -293,13 +258,6 @@
 </td>
 <td>patch core</td>
 <td><a href="https://bugs.ruby-lang.org/issues/16173">ENV.delete returns nil when name does not exist and block given</a>
-</td>
-</tr>
-<tr class=" test ">
-<td><a href="https://bugs.ruby-lang.org/issues/16159">16159</a>
-</td>
-<td>test</td>
-<td><a href="https://bugs.ruby-lang.org/issues/16159">Off by 1 errors from time_params tests</a>
 </td>
 </tr>
 <tr class=" regexp notbug ">
@@ -379,13 +337,6 @@
 <td><a href="https://bugs.ruby-lang.org/issues/15993">&#39;require&#39; doesn&#39;t work if there are Cyrillic chars in the path to Ruby dir</a>
 </td>
 </tr>
-<tr class=" lib ">
-<td><a href="https://bugs.ruby-lang.org/issues/15944">15944</a>
-</td>
-<td>lib</td>
-<td><a href="https://bugs.ruby-lang.org/issues/15944">Simultaneous line feeding and scrolling doesn&#39;t work well with irb on tmux</a>
-</td>
-</tr>
 <tr class=" core ">
 <td><a href="https://bugs.ruby-lang.org/issues/15928">15928</a>
 </td>
@@ -412,20 +363,6 @@
 </td>
 <td>patch lib</td>
 <td><a href="https://bugs.ruby-lang.org/issues/15834">Mutating the result of SortedSet.to_a mutates the original set, potentially violating the set&#39;s guarantees</a>
-</td>
-</tr>
-<tr class=" haiku ">
-<td><a href="https://bugs.ruby-lang.org/issues/15828">15828</a>
-</td>
-<td>haiku</td>
-<td><a href="https://bugs.ruby-lang.org/issues/15828">DOTfiles and DOTfolders aren&#39;t allowed in $HOME folder on Haiku</a>
-</td>
-</tr>
-<tr class=" haiku openssl ">
-<td><a href="https://bugs.ruby-lang.org/issues/15827">15827</a>
-</td>
-<td>haiku openssl</td>
-<td><a href="https://bugs.ruby-lang.org/issues/15827">Haiku: SSL tests failing</a>
 </td>
 </tr>
 <tr class=" lib ">
@@ -622,13 +559,6 @@
 </td>
 <td>win thread</td>
 <td><a href="https://bugs.ruby-lang.org/issues/15569">TestResolvDNS#test_no_server always fails on usa&#39;s mswin environment</a>
-</td>
-</tr>
-<tr class=" core notbug ">
-<td><a href="https://bugs.ruby-lang.org/issues/15551">15551</a>
-</td>
-<td>core notbug</td>
-<td><a href="https://bugs.ruby-lang.org/issues/15551">The behavior of FIX2INT and FIX2UINT differs by platform</a>
 </td>
 </tr>
 <tr class=" win ">
@@ -1667,13 +1597,6 @@
 <td><a href="https://bugs.ruby-lang.org/issues/13151">File.writable? doesn&#39;t report correctly if a directory is writable on Windows.</a>
 </td>
 </tr>
-<tr class=" patch lib ">
-<td><a href="https://bugs.ruby-lang.org/issues/13144">13144</a>
-</td>
-<td>patch lib</td>
-<td><a href="https://bugs.ruby-lang.org/issues/13144">prettyprint doesn&#39;t detect cycles when wrapped inside Delegators</a>
-</td>
-</tr>
 <tr class=" build ">
 <td><a href="https://bugs.ruby-lang.org/issues/13125">13125</a>
 </td>
@@ -1940,25 +1863,11 @@
 <td><a href="https://bugs.ruby-lang.org/issues/12416">struct rb_id_table lacks mark function</a>
 </td>
 </tr>
-<tr class=" test ">
-<td><a href="https://bugs.ruby-lang.org/issues/12407">12407</a>
-</td>
-<td>test</td>
-<td><a href="https://bugs.ruby-lang.org/issues/12407">2 failures of TestMkmf::TestConvertible</a>
-</td>
-</tr>
 <tr class=" build ">
 <td><a href="https://bugs.ruby-lang.org/issues/12392">12392</a>
 </td>
 <td>build</td>
 <td><a href="https://bugs.ruby-lang.org/issues/12392">configure --with-sitedir=no --with-sitearchdir=no --with-vendordir=no --with-vendorarchdir=no が機能しない</a>
-</td>
-</tr>
-<tr class=" ext ">
-<td><a href="https://bugs.ruby-lang.org/issues/12388">12388</a>
-</td>
-<td>ext</td>
-<td><a href="https://bugs.ruby-lang.org/issues/12388">Iterating second dbm enum causes first dbm enum to stop</a>
 </td>
 </tr>
 <tr class=" core notbug ">
@@ -2043,13 +1952,6 @@
 </td>
 <td>win core</td>
 <td><a href="https://bugs.ruby-lang.org/issues/12040">[Win32] File.stat fails on a mounted volume</a>
-</td>
-</tr>
-<tr class=" build ">
-<td><a href="https://bugs.ruby-lang.org/issues/12015">12015</a>
-</td>
-<td>build</td>
-<td><a href="https://bugs.ruby-lang.org/issues/12015">Improving code coverage visibility</a>
 </td>
 </tr>
 <tr class=" core maybenotbug ">
@@ -2204,13 +2106,6 @@
 </td>
 <td>core</td>
 <td><a href="https://bugs.ruby-lang.org/issues/11269">ruby_init_setproctitle() should be called before require_libraries()</a>
-</td>
-</tr>
-<tr class=" patch lib ">
-<td><a href="https://bugs.ruby-lang.org/issues/11268">11268</a>
-</td>
-<td>patch lib</td>
-<td><a href="https://bugs.ruby-lang.org/issues/11268">Zlib::DataError: incorrect header check</a>
 </td>
 </tr>
 <tr class=" core ">
@@ -2386,13 +2281,6 @@
 </td>
 <td>core maybenotbug</td>
 <td><a href="https://bugs.ruby-lang.org/issues/10684">Block arity changes through Enumerable methods</a>
-</td>
-</tr>
-<tr class=" perf ">
-<td><a href="https://bugs.ruby-lang.org/issues/10650">10650</a>
-</td>
-<td>perf</td>
-<td><a href="https://bugs.ruby-lang.org/issues/10650">[PERF] bm_hash_keys and  bm_hash_values</a>
 </td>
 </tr>
 <tr class=" lib ">
@@ -2626,13 +2514,6 @@
 <td><a href="https://bugs.ruby-lang.org/issues/9713">__FILE__ return unexpected encoding - breaks Dir.glob</a>
 </td>
 </tr>
-<tr class=" regexp notbug ">
-<td><a href="https://bugs.ruby-lang.org/issues/9693">9693</a>
-</td>
-<td>regexp notbug</td>
-<td><a href="https://bugs.ruby-lang.org/issues/9693">\x{} in regexp</a>
-</td>
-</tr>
 <tr class=" ext ">
 <td><a href="https://bugs.ruby-lang.org/issues/9659">9659</a>
 </td>
@@ -2722,20 +2603,6 @@
 </td>
 <td>test</td>
 <td><a href="https://bugs.ruby-lang.org/issues/9366">&quot;make -j32 check TESTS=-j32&quot; occasionally fails on rubygems/specification</a>
-</td>
-</tr>
-<tr class=" build notbug ">
-<td><a href="https://bugs.ruby-lang.org/issues/9312">9312</a>
-</td>
-<td>build notbug</td>
-<td><a href="https://bugs.ruby-lang.org/issues/9312">Build the ruby executable in bin/</a>
-</td>
-</tr>
-<tr class=" core notbug ">
-<td><a href="https://bugs.ruby-lang.org/issues/9291">9291</a>
-</td>
-<td>core notbug</td>
-<td><a href="https://bugs.ruby-lang.org/issues/9291">array splatting a nil works, but hash splatting a nil does not</a>
 </td>
 </tr>
 <tr class=" build notbug ">
@@ -2883,13 +2750,6 @@
 </td>
 <td>patch core maybenotbug</td>
 <td><a href="https://bugs.ruby-lang.org/issues/8677">$LOAD_PATH did not encoded into the &quot;internal encoding&quot;</a>
-</td>
-</tr>
-<tr class=" patch core notbug ">
-<td><a href="https://bugs.ruby-lang.org/issues/8507">8507</a>
-</td>
-<td>patch core notbug</td>
-<td><a href="https://bugs.ruby-lang.org/issues/8507">Keyword splat does not convert arg to Hash</a>
 </td>
 </tr>
 <tr class=" core ">
