--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <html>
 <head>
-<title>428 Tagged Open Ruby Bugs as of 2019-12-30 04:14:44 +0900</title>
+<title>428 Tagged Open Ruby Bugs as of 2019-12-30 04:15:42 +0900</title>
 <link rel="stylesheet"  href="app.css" />
 </head>
 <body>
 <p class="filter-buttons">Available Tags: <input type="submit" value="core" />
 <input type="submit" value="win" />
+<input type="submit" value="patch" />
 <input type="submit" value="lib" />
 <input type="submit" value="ext" />
-<input type="submit" value="patch" />
 <input type="submit" value="maybenotbug" />
 <input type="submit" value="notbug" />
 <input type="submit" value="build" />
@@ -41,7 +41,7 @@
 <input id="filter" type="text" size="80" />
 (<span id="matched">428</span> matched)
 <table>
-<caption>428 Tagged Open Ruby Bugs as of 2019-12-30 04:14:44 +0900</caption>
+<caption>428 Tagged Open Ruby Bugs as of 2019-12-30 04:15:42 +0900</caption>
 <thead>
 <tr class=" Tags ">
 <th>Bug ID</th>
@@ -50,17 +50,17 @@
 </tr>
 </thead>
 <tbody>
-<tr class=" core ">
+<tr class=" patch core ">
 <td><a href="https://bugs.ruby-lang.org/issues/16466">16466</a>
 </td>
-<td>core</td>
+<td>patch core</td>
 <td><a href="https://bugs.ruby-lang.org/issues/16466">`*args -&gt; *args` delegation should be warned when the last hash has a `ruby2_keywords` flag</a>
 </td>
 </tr>
-<tr class=" core ">
+<tr class=" patch core ">
 <td><a href="https://bugs.ruby-lang.org/issues/16465">16465</a>
 </td>
-<td>core</td>
+<td>patch core</td>
 <td><a href="https://bugs.ruby-lang.org/issues/16465">False keyword warning against Struct#initialize</a>
 </td>
 </tr>
@@ -71,17 +71,17 @@
 <td><a href="https://bugs.ruby-lang.org/issues/16462">Ruby 2.7 autoload not working with $RUBYLIB (maybe circular dependency error)</a>
 </td>
 </tr>
-<tr class=" tracepoint ">
+<tr class=" patch tracepoint ">
 <td><a href="https://bugs.ruby-lang.org/issues/16459">16459</a>
 </td>
-<td>tracepoint</td>
+<td>patch tracepoint</td>
 <td><a href="https://bugs.ruby-lang.org/issues/16459">&lt;internal:trace_point&gt;:346: [BUG] Segmentation fault at 0x0000000000000008</a>
 </td>
 </tr>
-<tr class=" fiber ">
+<tr class=" patch fiber ">
 <td><a href="https://bugs.ruby-lang.org/issues/16455">16455</a>
 </td>
-<td>fiber</td>
+<td>patch fiber</td>
 <td><a href="https://bugs.ruby-lang.org/issues/16455">coroutine ucontext uses deprecated POSIX getcontext/swapcontext/makecontext, absent in musl</a>
 </td>
 </tr>
