--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>430 Tagged Open Ruby Bugs as of 2020-01-08 03:01:02 +0900</title>
+<title>430 Tagged Open Ruby Bugs as of 2020-01-08 03:06:40 +0900</title>
 <link rel="stylesheet"  href="app.css" />
 </head>
 <body>
@@ -41,7 +41,7 @@
 <input id="filter" type="text" size="80" />
 (<span id="matched">430</span> matched)
 <table>
-<caption>430 Tagged Open Ruby Bugs as of 2020-01-08 03:01:02 +0900</caption>
+<caption>430 Tagged Open Ruby Bugs as of 2020-01-08 03:06:40 +0900</caption>
 <thead>
 <tr class=" Tags ">
 <th>Bug ID</th>
@@ -260,10 +260,10 @@
 <td><a href="https://bugs.ruby-lang.org/issues/16338">gemspec stub EOF separators throw warning</a>
 </td>
 </tr>
-<tr class="  ">
+<tr class=" lib ">
 <td><a href="https://bugs.ruby-lang.org/issues/16337">16337</a>
 </td>
-<td></td>
+<td>lib</td>
 <td><a href="https://bugs.ruby-lang.org/issues/16337">kernel_gem.rb:68 - ThreadError</a>
 </td>
 </tr>
