--- a/index.html
+++ b/index.html
@@ -1,17 +1,17 @@
 <html>
 <head>
-<title>430 Tagged Open Ruby Bugs as of 2020-01-10 06:13:34 +0900</title>
+<title>428 Tagged Open Ruby Bugs as of 2020-01-24 02:29:21 +0900</title>
 <link rel="stylesheet"  href="app.css" />
 </head>
 <body>
 <p class="filter-buttons">Available Tags: <input type="submit" value="core" />
 <input type="submit" value="win" />
 <input type="submit" value="lib" />
-<input type="submit" value="patch" />
 <input type="submit" value="ext" />
+<input type="submit" value="patch" />
 <input type="submit" value="maybenotbug" />
-<input type="submit" value="notbug" />
 <input type="submit" value="build" />
+<input type="submit" value="notbug" />
 <input type="submit" value="encoding" />
 <input type="submit" value="thread" />
 <input type="submit" value="test" />
@@ -22,26 +22,26 @@
 <input type="submit" value="regexp" />
 <input type="submit" value="arm" />
 <input type="submit" value="aix" />
-<input type="submit" value="unfixable" />
-<input type="submit" value="backport" />
 <input type="submit" value="solaris" />
-<input type="submit" value="autoload" />
-<input type="submit" value="parser" />
-<input type="submit" value="openssl" />
-<input type="submit" value="ruby3" />
+<input type="submit" value="backport" />
 <input type="submit" value="fiber" />
-<input type="submit" value="doc" />
-<input type="submit" value="haiku" />
+<input type="submit" value="openssl" />
+<input type="submit" value="unfixable" />
+<input type="submit" value="autoload" />
+<input type="submit" value="ruby3" />
 <input type="submit" value="linux" />
+<input type="submit" value="haiku" />
 <input type="submit" value="wip-patch" />
-<input type="submit" value="mips" />
+<input type="submit" value="parser" />
 <input type="submit" value="uriencoding" />
+<input type="submit" value="mips" />
+<input type="submit" value="doc" />
 <input type="submit" value="other" /></p>
 <label for="filter">Filter Tags:</label>
 <input id="filter" type="text" size="80" />
-(<span id="matched">430</span> matched)
+(<span id="matched">428</span> matched)
 <table>
-<caption>430 Tagged Open Ruby Bugs as of 2020-01-10 06:13:34 +0900</caption>
+<caption>428 Tagged Open Ruby Bugs as of 2020-01-24 02:29:21 +0900</caption>
 <thead>
 <tr class=" Tags ">
 <th>Bug ID</th>
@@ -50,6 +50,69 @@
 </tr>
 </thead>
 <tbody>
+<tr class=" build ">
+<td><a href="https://bugs.ruby-lang.org/issues/16558">16558</a>
+</td>
+<td>build</td>
+<td><a href="https://bugs.ruby-lang.org/issues/16558">What is special about GB2312</a>
+</td>
+</tr>
+<tr class=" notbug ">
+<td><a href="https://bugs.ruby-lang.org/issues/16556">16556</a>
+</td>
+<td>notbug</td>
+<td><a href="https://bugs.ruby-lang.org/issues/16556">Showing rails aborted message while running rails s</a>
+</td>
+</tr>
+<tr class=" core ">
+<td><a href="https://bugs.ruby-lang.org/issues/16522">16522</a>
+</td>
+<td>core</td>
+<td><a href="https://bugs.ruby-lang.org/issues/16522">Ruby 2.7 logs deprecation warning when Warning[:deprecated] is set to false.  </a>
+</td>
+</tr>
+<tr class=" build ">
+<td><a href="https://bugs.ruby-lang.org/issues/16521">16521</a>
+</td>
+<td>build</td>
+<td><a href="https://bugs.ruby-lang.org/issues/16521">ST_DEBUG not working</a>
+</td>
+</tr>
+<tr class=" core ">
+<td><a href="https://bugs.ruby-lang.org/issues/16518">16518</a>
+</td>
+<td>core</td>
+<td><a href="https://bugs.ruby-lang.org/issues/16518">Should we rationalize Rational&#39;s numerator automatically?</a>
+</td>
+</tr>
+<tr class=" lib ">
+<td><a href="https://bugs.ruby-lang.org/issues/16510">16510</a>
+</td>
+<td>lib</td>
+<td><a href="https://bugs.ruby-lang.org/issues/16510">irb crashes when hitting &#39;Home&#39; or &#39;End&#39; keys</a>
+</td>
+</tr>
+<tr class=" core ">
+<td><a href="https://bugs.ruby-lang.org/issues/16504">16504</a>
+</td>
+<td>core</td>
+<td><a href="https://bugs.ruby-lang.org/issues/16504">`foo(*args, &amp;args.pop)` should pass all elements of args</a>
+</td>
+</tr>
+<tr class=" core ">
+<td><a href="https://bugs.ruby-lang.org/issues/16500">16500</a>
+</td>
+<td>core</td>
+<td><a href="https://bugs.ruby-lang.org/issues/16500">Argument is added to both splat and last &amp;block argument</a>
+</td>
+</tr>
+<tr class=" ext ">
+<td><a href="https://bugs.ruby-lang.org/issues/16497">16497</a>
+</td>
+<td>ext</td>
+<td><a href="https://bugs.ruby-lang.org/issues/16497">StringIO#internal_encoding is broken (more severely in 2.7)</a>
+</td>
+</tr>
 <tr class=" thread arm ">
 <td><a href="https://bugs.ruby-lang.org/issues/16493">16493</a>
 </td>
@@ -69,20 +132,6 @@
 </td>
 <td>build lib</td>
 <td><a href="https://bugs.ruby-lang.org/issues/16490">mkmf.rbの非互換な変更</a>
-</td>
-</tr>
-<tr class=" core ">
-<td><a href="https://bugs.ruby-lang.org/issues/16486">16486</a>
-</td>
-<td>core</td>
-<td><a href="https://bugs.ruby-lang.org/issues/16486">Hash.ruby2_keywords?(hash) and Hash.ruby2_keywords!(hash)</a>
-</td>
-</tr>
-<tr class=" build ">
-<td><a href="https://bugs.ruby-lang.org/issues/16480">16480</a>
-</td>
-<td>build</td>
-<td><a href="https://bugs.ruby-lang.org/issues/16480">Ruby 2.7, C++, and rb_define_method compilation error</a>
 </td>
 </tr>
 <tr class=" ext maybenotbug ">
@@ -314,13 +363,6 @@
 </td>
 <td>core perf </td>
 <td><a href="https://bugs.ruby-lang.org/issues/16243">case/when is slower than if on MRI</a>
-</td>
-</tr>
-<tr class=" patch win encoding ">
-<td><a href="https://bugs.ruby-lang.org/issues/16233">16233</a>
-</td>
-<td>patch win encoding</td>
-<td><a href="https://bugs.ruby-lang.org/issues/16233">winruby UTF8 Fallback for no CodePage</a>
 </td>
 </tr>
 <tr class=" other ">
@@ -652,6 +694,13 @@
 <td><a href="https://bugs.ruby-lang.org/issues/15517">Net::HTTP not recognizing valid UTF-8</a>
 </td>
 </tr>
+<tr class="  ">
+<td><a href="https://bugs.ruby-lang.org/issues/15509">15509</a>
+</td>
+<td></td>
+<td><a href="https://bugs.ruby-lang.org/issues/15509">TCPServer#accept isn&#39;t interrupted</a>
+</td>
+</tr>
 <tr class=" thread ">
 <td><a href="https://bugs.ruby-lang.org/issues/15507">15507</a>
 </td>
@@ -783,13 +832,6 @@
 </td>
 <td>patch core</td>
 <td><a href="https://bugs.ruby-lang.org/issues/15263">[PATCH] vm_trace.c (postponed_job_register): only hit main thread</a>
-</td>
-</tr>
-<tr class=" ext ">
-<td><a href="https://bugs.ruby-lang.org/issues/15262">15262</a>
-</td>
-<td>ext</td>
-<td><a href="https://bugs.ruby-lang.org/issues/15262">WeakRef::RefError for object that is still in use</a>
 </td>
 </tr>
 <tr class=" win test ">
@@ -1238,13 +1280,6 @@
 </td>
 <td>build</td>
 <td><a href="https://bugs.ruby-lang.org/issues/14409">インストール手順の改善</a>
-</td>
-</tr>
-<tr class=" patch doc ">
-<td><a href="https://bugs.ruby-lang.org/issues/14408">14408</a>
-</td>
-<td>patch doc</td>
-<td><a href="https://bugs.ruby-lang.org/issues/14408">Add hash argument description for GC.stat and GC.latest_gc_info document</a>
 </td>
 </tr>
 <tr class=" core ">
@@ -2003,13 +2038,6 @@
 <td><a href="https://bugs.ruby-lang.org/issues/12040">[Win32] File.stat fails on a mounted volume</a>
 </td>
 </tr>
-<tr class=" core maybenotbug ">
-<td><a href="https://bugs.ruby-lang.org/issues/11878">11878</a>
-</td>
-<td>core maybenotbug</td>
-<td><a href="https://bugs.ruby-lang.org/issues/11878">Comparison of prepended modules</a>
-</td>
-</tr>
 <tr class=" cygwin test ">
 <td><a href="https://bugs.ruby-lang.org/issues/11840">11840</a>
 </td>
@@ -2269,25 +2297,11 @@
 <td><a href="https://bugs.ruby-lang.org/issues/11022">opening an eigenclass does not change the class variable definition context</a>
 </td>
 </tr>
-<tr class=" core maybenotbug ">
-<td><a href="https://bugs.ruby-lang.org/issues/11014">11014</a>
-</td>
-<td>core maybenotbug</td>
-<td><a href="https://bugs.ruby-lang.org/issues/11014">String#partition doesn&#39;t return correct result on zero-width match</a>
-</td>
-</tr>
 <tr class=" core ">
 <td><a href="https://bugs.ruby-lang.org/issues/10959">10959</a>
 </td>
 <td>core</td>
 <td><a href="https://bugs.ruby-lang.org/issues/10959">rb_iseq_load: problems with hash containing symbolic keys</a>
-</td>
-</tr>
-<tr class=" patch core maybenotbug ">
-<td><a href="https://bugs.ruby-lang.org/issues/10929">10929</a>
-</td>
-<td>patch core maybenotbug</td>
-<td><a href="https://bugs.ruby-lang.org/issues/10929">NilClass#to_proc and &amp; don&#39;t mix?</a>
 </td>
 </tr>
 <tr class=" lib ">
@@ -2423,13 +2437,6 @@
 <td><a href="https://bugs.ruby-lang.org/issues/10416">Create mechanism for updating of Unicode data files downstreams when we want</a>
 </td>
 </tr>
-<tr class=" parser unfixable ">
-<td><a href="https://bugs.ruby-lang.org/issues/10388">10388</a>
-</td>
-<td>parser unfixable</td>
-<td><a href="https://bugs.ruby-lang.org/issues/10388">Operator precedence problem in multiple assignment (massign)</a>
-</td>
-</tr>
 <tr class=" core ">
 <td><a href="https://bugs.ruby-lang.org/issues/10248">10248</a>
 </td>
@@ -2514,13 +2521,6 @@
 <td><a href="https://bugs.ruby-lang.org/issues/9877">IRB::OutputMethod defines &quot;pp&quot;, but it&#39;s actually &quot;p&quot;</a>
 </td>
 </tr>
-<tr class=" core notbug ">
-<td><a href="https://bugs.ruby-lang.org/issues/9815">9815</a>
-</td>
-<td>core notbug</td>
-<td><a href="https://bugs.ruby-lang.org/issues/9815">attr_reader doesn&#39;t warn on a uninitialized instance variable</a>
-</td>
-</tr>
 <tr class=" lib maybenotbug ">
 <td><a href="https://bugs.ruby-lang.org/issues/9806">9806</a>
 </td>
@@ -2554,13 +2554,6 @@
 </td>
 <td>win encoding</td>
 <td><a href="https://bugs.ruby-lang.org/issues/9715">ENV data yield ASCII-8BIT encoded strings under Windows with unicode username</a>
-</td>
-</tr>
-<tr class=" win encoding ">
-<td><a href="https://bugs.ruby-lang.org/issues/9713">9713</a>
-</td>
-<td>win encoding</td>
-<td><a href="https://bugs.ruby-lang.org/issues/9713">__FILE__ return unexpected encoding - breaks Dir.glob</a>
 </td>
 </tr>
 <tr class=" ext ">
@@ -2750,13 +2743,6 @@
 </td>
 <td>patch build</td>
 <td><a href="https://bugs.ruby-lang.org/issues/8973">Allow to configure archlibdir for multiarch</a>
-</td>
-</tr>
-<tr class=" doc notbug ">
-<td><a href="https://bugs.ruby-lang.org/issues/8841">8841</a>
-</td>
-<td>doc notbug</td>
-<td><a href="https://bugs.ruby-lang.org/issues/8841">Module#included_modules and prepended modules</a>
 </td>
 </tr>
 <tr class=" lib maybenotbug ">
