--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>428 Tagged Open Ruby Bugs as of 2020-01-24 02:29:21 +0900</title>
+<title>427 Tagged Open Ruby Bugs as of 2020-02-02 11:11:19 +0900</title>
 <link rel="stylesheet"  href="app.css" />
 </head>
 <body>
@@ -39,9 +39,9 @@
 <input type="submit" value="other" /></p>
 <label for="filter">Filter Tags:</label>
 <input id="filter" type="text" size="80" />
-(<span id="matched">428</span> matched)
+(<span id="matched">427</span> matched)
 <table>
-<caption>428 Tagged Open Ruby Bugs as of 2020-01-24 02:29:21 +0900</caption>
+<caption>427 Tagged Open Ruby Bugs as of 2020-02-02 11:11:19 +0900</caption>
 <thead>
 <tr class=" Tags ">
 <th>Bug ID</th>
@@ -50,6 +50,13 @@
 </tr>
 </thead>
 <tbody>
+<tr class=" patch lib ">
+<td><a href="https://bugs.ruby-lang.org/issues/16559">16559</a>
+</td>
+<td>patch lib</td>
+<td><a href="https://bugs.ruby-lang.org/issues/16559">Net::HTTP#request does not properly close TCP socket if #started? is false</a>
+</td>
+</tr>
 <tr class=" build ">
 <td><a href="https://bugs.ruby-lang.org/issues/16558">16558</a>
 </td>
@@ -83,13 +90,6 @@
 </td>
 <td>core</td>
 <td><a href="https://bugs.ruby-lang.org/issues/16518">Should we rationalize Rational&#39;s numerator automatically?</a>
-</td>
-</tr>
-<tr class=" lib ">
-<td><a href="https://bugs.ruby-lang.org/issues/16510">16510</a>
-</td>
-<td>lib</td>
-<td><a href="https://bugs.ruby-lang.org/issues/16510">irb crashes when hitting &#39;Home&#39; or &#39;End&#39; keys</a>
 </td>
 </tr>
 <tr class=" core ">
@@ -867,13 +867,6 @@
 </td>
 <td>patch build</td>
 <td><a href="https://bugs.ruby-lang.org/issues/15178">Wrong paramaters passing to pthread_setname_np(3)</a>
-</td>
-</tr>
-<tr class=" core ">
-<td><a href="https://bugs.ruby-lang.org/issues/15177">15177</a>
-</td>
-<td>core</td>
-<td><a href="https://bugs.ruby-lang.org/issues/15177">起動した後にTZを変更するとTime#utcがずれることがある</a>
 </td>
 </tr>
 <tr class=" cygwin lib ">
